--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -2,99 +2,66 @@
 
 @shadow: 1px 1px 1px @dark-gray-color-60;
 
-/* Structure for action submenus which open on hover */
-*, section.contentbox article header nav {
-    ul.actionmenu {
+.action-menu {
+    position: relative;
+
+    .action-menu-icon, .action-menu-item img, .action-menu-item svg, .action-menu-no-icon {
+        .square(20px);
+        display: inline-block;
+        vertical-align: bottom;
+    }
+
+    .action-menu-icon {
         cursor: pointer;
-        float: right;
-        list-style-type: none;
-        padding: 2px;
         position: relative;
+        z-index: 3;
+    }
+
+    .action-menu-content {
+        position: absolute;
+        top: -4px;
+        right: -4px;
+
+        padding: 4px 28px 4px 8px;
+        z-index: 2;
+
+        background: white;
+        box-shadow: @shadow;
         text-align: left;
+        white-space: nowrap;
+    }
 
-        &.positioncorrected {
-            position: absolute;
-            top: 4px;
+    .action-menu-title {
+        font-weight: bold;
+        margin: 0.2em 0 0.3em;
+    }
+
+    .action-menu-list {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .action-menu-item {
+        padding: 3px 0;
+        a {
+            padding-left: 0;
         }
 
-        img, svg {
-            height: 20px;
-            width: 20px;
-        }
-
-        li {
-            padding: 3px;
-            white-space:nowrap;
-
-            ul {
-                display: none;
-                background-color: white;
-                box-shadow: @shadow;
-                list-style-type: none;
-                padding: 5px;
-                position: absolute;
-                z-index: 999;
-
-                img, svg {
-                    padding-right: 5px;
-                    vertical-align: bottom;
-                }
-            }
-
-            &.active {
-                position: relative;
-
-                > ul {
-                    align-items: stretch;
-                    display: flex;
-                    flex-direction: column;
-                    position: absolute;
-                    right: 2px;
-                    top: 0;
-                }
-            }
-        }
-
-        > li {
-            width: 20px;
-
-            div {
-                border: 0;
-                height: 20px;
-
-                &.action-title {
-                    display: none;
-                    font-weight: bold;
-                    padding-left: 5px;
-                }
-
-            }
-
-            &.active {
-                background-color: white;
-                box-shadow: @shadow;
-                display: flex;
-                flex-direction: row;
-                flex: 1 0 auto;
-                padding: 3px;
-                padding-top: 4px;
-                width: inherit;
-
-                > img, > svg {
-                    align-self: flex-end;
-                    flex: 0 0 20px;
-                    margin-left: auto;
-                }
-
-                div.action-title {
-                    display: inline-block;
-                }
-
-                > ul {
-                    right: 0;
-                    top: ~"calc(2em - 1px)";
-                }
-            }
+        img, svg, .action-menu-no-icon {
+            margin: 0 0.25em;
         }
     }
+
+    &:not(.active) {
+        .action-menu-content {
+            display: none;
+        }
+        .action-menu-icon {
+            z-index: 1;
+        }
+    }
+}
+.force-visible-overflow {
+    overflow: visible !important;
 }
