--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -122,7 +122,7 @@ section.contentbox {
                 align-items: center;
             }
             nav {
-                * {
+                a, span {
                     display: inline-block;
                     vertical-align: middle;
                 }
