action menu: provide no js fallback, re #6590

--- a/public/assets/stylesheets/less/actionmenu.less
+++ b/public/assets/stylesheets/less/actionmenu.less
@@ -61,6 +61,15 @@
             z-index: 1;
         }
     }
+
+    .no-js &:hover {
+        .action-menu-content {
+            display: initial;
+        }
+        .action-menu-icon {
+            z-index: 3;
+        }
+    }
 }
 .force-visible-overflow {
     overflow: visible !important;
