dialog/overlay: blur initial overlay as well, fixes #6670

--- a/public/assets/stylesheets/less/dialog.less
+++ b/public/assets/stylesheets/less/dialog.less
@@ -150,6 +150,11 @@
         background-image: none, url("@{image-path}/ajax-indicator-black.svg");
     }
 }
+#layout_wrapper.has-overlay {
+    -webkit-filter: blur(1px);
+    filter: blur(1px);
+}
+
 
 // Confirmation dialog (like createQuestion)
 .ui-dialog.studip-confirmation {
