--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -26,7 +26,7 @@ section.contentbox {
             }
         }
 
-        nav {
+        > nav {
             text-align: right;
             padding: 2px;
             display: flex;
