--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2922,7 +2922,7 @@ section.contentbox header h1 > a img,
 section.contentbox header h1 > a svg {
   margin-right: 5px;
 }
-section.contentbox header nav {
+section.contentbox header > nav {
   text-align: right;
   padding: 2px;
   display: flex;
