changes according to code conventions/review, re #5177

--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -39,7 +39,7 @@
 
             img {
                 padding: 12px;
-                width: 18px;
+                .square(18px);
             }
         }
 
