--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -28,6 +28,7 @@
             position: absolute;
             top: -20px;
             border: 3px solid white;
+            cursor: pointer;
             
             &.left {
                 left: -15px;
@@ -73,8 +74,7 @@
         padding: 5px;
         background-color: white;
         margin-left: 30px;
-
-
+        display: none;
     }
 
     .clear {
