messages: align quicksearch and multiperson search on one line and add top margin for message options, fixes #6433

--- a/public/assets/stylesheets/less/messages.less
+++ b/public/assets/stylesheets/less/messages.less
@@ -81,3 +81,23 @@ a.message-tag {
   font-size: 0.8em;
   color: @base-gray;
 }
+
+.message-search-wrapper {
+    .flex();
+    .flex-justify-content(flex-start);
+
+    > * {
+        margin-right: 1em;
+    }
+}
+ul.message-options {
+   list-style: none;
+   margin: 1em 0 0;
+   padding: 0;
+   text-align: center;
+
+   > li {
+       display: inline-block;
+       min-width: 70px;
+   }
+}
