re #6659 fix webkit selects

--- a/public/assets/stylesheets/less/i18n.less
+++ b/public/assets/stylesheets/less/i18n.less
@@ -14,6 +14,7 @@ select.i18n {
   padding-left: 28px !important;
   background-repeat: no-repeat;
   background-position: left 2px center;
+  -webkit-appearance: none;
   option {
     background-repeat: no-repeat;
     padding-left: 28px !important;
