re #6659 fix webkit css height

--- a/public/assets/stylesheets/less/i18n.less
+++ b/public/assets/stylesheets/less/i18n.less
@@ -11,10 +11,11 @@ div.i18n_group.single_lang {
 
 select.i18n {
   width: auto !important;
-  padding-left: 28px !important;
   background-repeat: no-repeat;
   background-position: left 2px center;
   -webkit-appearance: none;
+  padding: 0px 2px 0px 28px !important;
+  height: 22px;;
   option {
     background-repeat: no-repeat;
     padding-left: 28px !important;
