--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -74,6 +74,7 @@
         padding: 5px;
         background-color: white;
         margin-left: 30px;
+        display: none;
     }
 
     .clear {
@@ -84,10 +85,6 @@
         display: block;
     }
 
-    .activity-details {
-        max-height: 200px;
-        overflow: hidden;
-    }
 
     footer {
         padding: 5px;
