activities: use css icons in navigation (so icons are defined in one place only), use global js handlers (so handlers don't need to be un- and rebound after every ajax call) and restructure html attributes so that the js can be reduced both in size as well as complexity, re #6767, re #6774

--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -170,3 +170,25 @@
   81%  { transform: scale(1.3); }
   100% { transform: scale(1); }
 }
+
+// Mixin that replaces the navigation icon tags with css images
+.navigation-icon(@default-icon-name, @toggled-icon-name) {
+    img { display: none; }
+
+    display: inline-block;
+
+    .background-icon(@default-icon-name, 'clickable');
+    .hide-text();
+    .square(16px);
+
+    &.toggled {
+        .background-icon(@toggled-icon-name, 'clickable');
+    }
+}
+
+#toggle-all-activities {
+    .navigation-icon('no-activity', 'activity');
+}
+#toggle-user-activities {
+    .navigation-icon('visibility-invisible/headache', 'visibility-visible/headache');
+}
