add js lib select2, step1, re #6801

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -5,6 +5,8 @@
 
 @import "mixins.less";
 
+@import "vendor/select2-4.0.3.css";
+
 @import "less/font-face-lato.less";
 @import "less/variables.less";
 @import "less/typography.less";
