.nested-select draft 1, re #6801

--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -5,8 +5,6 @@
 
 @import "mixins.less";
 
-@import "vendor/select2-4.0.3.css";
-
 @import "less/font-face-lato.less";
 @import "less/variables.less";
 @import "less/typography.less";
@@ -63,6 +61,7 @@
 @import "less/enrolment.less";
 @import "less/dialog.less";
 @import "less/lists.less";
+@import "less/selects.less";
 @import "less/plus.less";
 @import "less/coursewizard.less";
 @import "less/smileys.less";
